# arkanoid-oop

./: .gitignore  .gitmodules  CMakeLists.txt  GPROJ_SRC_FILES  README.md
data/shaders/: sprite_renderer.fs  sprite_renderer.vs
shaders/: fragment.glsl  lighting.fs  lighting.vs  simple.fs  simple.vs  simple_tex.fs  simple_tex.vs  vertex.glsl
src/: array.hpp  array_type.hpp  ball.cpp  ball.hpp  batch_renderer2D.cpp  batch_renderer2D.hpp  brick.hpp  bricks.cpp  bricks.hpp  color.hpp  display.cpp  display.hpp  exception.hpp  finally.hpp  game.cpp  game.hpp  graphic_string.cpp  graphic_string.hpp  index_buffer.cpp  index_buffer.hpp  keyboard.cpp  keyboard.hpp  level.cpp  level.hpp  main.cpp  math_types.hpp  matrix4.hpp  mesh.cpp  mesh.hpp  meshes.cpp  meshes.hpp  player.hpp  rectangle.hpp  renderable2D.cpp  renderable2D.hpp  renderer.cpp  renderer.hpp  renderer2D.hpp  renderer_types.hpp  resource_manager.cpp  (+31 more)
src/display/: display.cpp  display.hpp
src/math/: math_types.hpp  math_utils.hpp  matrix4.hpp  vector2.hpp  vector3.hpp  vector4.hpp
src/memory/: array.hpp  array_type.hpp
src/platform/: display.cpp  display.hpp  kbd_mouse_input.cpp  kbd_mouse_input.hpp
src/renderer/: camera.cpp  camera.hpp  display.cpp  display.hpp  renderer.cpp  renderer.hpp  renderer_types.hpp  shaders.cpp  shaders.hpp  textures.cpp  textures.hpp
tests/: matrix4_test.cpp
vs/: arkanoop.sln  arkanoop.vcxproj  arkanoop.vcxproj.filters  gpro.sln  gpro.vcxproj  gpro.vcxproj.filters
vs/gpro/: gpro.sln
vs/gpro/gpro/: gpro.vcxproj  gpro.vcxproj.filters
vs/shaders/: lamp.fs  lamp.vs  simple.fs
